2010-09-21  Ben Abbott <bpabbott@mac.com>

	* plot/__fltk_print__.m, plot/private/__ghostscript__.m,
	plot/__gnuplot_print__.m, plot/__print_parse_opts__.m,
	plot/print.m: Print via a pipeline.

2010-09-20  Ben Abbott <bpabbott@mac.com>

	* plot/legend.m: Index location cellstr to obtain a string.

2010-09-19  Ben Abbott <bpabbott@mac.com>

	* plot/colorbar.m, plot/axis.m,
	plot/private/__actual_axis_position__.m, plot/__go_draw_axes__.m:
	Special treatment activepositionproperty = outerposition for the
	gnuplot backend. This allows the gnuplot key to be placed outside
	the plotbox.
	* plot/private/__plt__.m: Trivial fix for recent legend changeset.
	* plot/legend.m: Treat line, patch, and surface objects differetly.
	* plot/__go_draw_axes__.m: Remove left over debug code.
	* miscellaneous/mkoctfile.m: Change help text to be consistent with
	the shell version.

2010-09-18  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Modify legend code to use data from legend
	axes.
	* plot/__go_draw_figure__.m: Draw draw figure axes, but pass their
	data to the axis they are associated with.
	* plot/__get_plt_axes_arg__.m: Ignores axes tagged with "legend".
	* plot/legend.m: Rewrite to use line and text primitives in a seperate
	axis.
	* plot/plot3.m: Support old legend format (eg "-;title'") with new
	legend code.
	* plot/private/__plt__.m: Ditto.

2010-09-16  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Ensure text objects have units of "data".

2010-09-16  John Swensen  <jpswensen@gmail.com>

	* imwrite.m: Accept more image formats.

2010-09-16  Jaroslav Hajek  <highegg@gmail.com>

	* signal/periodogram.m: Support additional inputs:
	win, nfft, Fs, range. Thanks to Alois Schlögl.

2010-09-13  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Use new function __gnuplot_has_terminal__().
	* plot/private/__gnuplot_has_terminal__.m: New function.

2010-09-13  Jaroslav Hajek  <highegg@gmail.com>
